include $(top_srcdir)/silent.am
include $(top_srcdir)/Makefile.common

AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../include
AM_CPPFLAGS += -DPRIVATE_AES -DPRIVATE_VDI

noinst_LIBRARIES = libgem.a

libgem_a_SOURCES = \
	gem_vdiP.h \
	gem_aesP.h \
	mt_gem.h \
	gem.h \
	aes.c \
	v_bez.h \
	\
	a_appl_exit.c \
	a_appl_init.c \
	a_vq_aes.c \
	\
	a_form_alert.c \
	a_form_center.c \
	a_form_center_grect.c \
	a_form_dial.c \
	a_form_dial_grect.c \
	\
	a_graf_handle.c \
	\
	a_menu_register.c \
	a_menu_bar.c \
	\
	a_objc_draw.c \
	a_objc_draw_grect.c \
	a_objc_offset.c \
	a_objc_find.c \
	\
	a_wind_get.c \
	a_wind_set.c \
	a_wind_set_int.c \
	a_wind_set_str.c \
	a_wind_set_ptr.c \
	a_wind_update.c \
	\
	rc_copy.c \
	rc_equal.c \
	rc_intersect.c \
	rc_union.c \
	rc_array_to_grect.c \
	rc_grect_to_array.c \
	globals.c \
	\
	vs_calibrate.c \
	vs_color.c \
	vsf_color.c \
	vsf_interior.c \
	vsf_perimeter.c \
	vsf_xperimeter.c \
	vsf_style.c \
	vsf_udpat.c \
	vsl_color.c \
	vsl_ends.c \
	vsl_type.c \
	vsl_udsty.c \
	vsl_width.c \
	vsm_color.c \
	vsm_height.c \
	vsm_type.c \
	vst_alignment.c \
	vst_color.c \
	vst_effects.c \
	vst_error.c \
	vst_font.c \
	vst_height.c \
	vst_point.c \
	vst_rotation.c \
	vst_scratch.c \
	vswr_mode.c \
	\
	v_opnwk.c \
	v_opnvwk.c \
	v_clsvwk.c \
	v_clswk.c \
	v_clrwk.c \
	v_updwk.c \
	v_flushcache.c \
	v_loadcache.c \
	v_savecache.c \
	v_set_app_buff.c \
	vs_clip.c \
	vs_clip_pxy.c \
	vs_clip_off.c \
	vst_load_fonts.c \
	vst_unload_fonts.c \
	\
	v_alpha_text.c \
	v_alpha_text16n.c \
	v_bit_image.c \
	v_xbit_image.c \
	v_clear_disp_list.c \
	v_copies.c \
	v_curdown.c \
	v_curhome.c \
	v_curleft.c \
	v_curright.c \
	v_curtext.c \
	v_curtext16n.c \
	v_curup.c \
	v_dspcur.c \
	v_eeol.c \
	v_eeos.c \
	v_enter_cur.c \
	v_escape2000.c \
	v_exit_cur.c \
	v_fontinit.c \
	v_form_adv.c \
	v_hardcopy.c \
	v_hardcopy_ex.c \
	v_meta_extents.c \
	v_offset.c \
	v_orient.c \
	v_output_window.c \
	v_page_size.c \
	v_rmcur.c \
	v_rvoff.c \
	v_rvon.c \
	v_sound.c \
	v_trays.c \
	v_ps_halftone.c \
	v_write_meta.c \
	vm_coords.c \
	vm_filename.c \
	vm_pagesize.c \
	vq_calibrate.c \
	vq_chcells.c \
	vq_curaddress.c \
	vq_page_name.c \
	vq_scan.c \
	vq_tabstatus.c \
	vq_tdimensions.c \
	vq_tray_names.c \
	vqp_error.c \
	vqp_filmname.c \
	vs_curaddress.c \
	vs_palette.c \
	vs_mute.c \
	vsc_expose.c \
	vsp_film.c \
	vqp_films.c \
	vqp_state.c \
	vsp_state.c \
	vsp_save.c \
	vsp_message.c \
	vt_alignment.c \
	vt_axis.c \
	vt_origin.c \
	vt_resolution.c \
	\
	v_hide_c.c \
	v_show_c.c \
	vex_butv.c \
	vex_curv.c \
	vex_motv.c \
	vex_wheelv.c \
	vex_timv.c \
	vq_key_s.c \
	vq_mouse.c \
	vrq_choice.c \
	vrq_locator.c \
	vrq_string.c \
	vrq_string16.c \
	vrq_valuator.c \
	vsc_form.c \
	vsin_mode.c \
	vsm_choice.c \
	vsm_locator.c \
	vsm_string.c \
	vsm_string16.c \
	vsm_valuator.c \
	\
	vq_calibrate.c \
	vq_cellarray.c \
	vq_color.c \
	vq_extnd.c \
	vqf_attributes.c \
	vqin_mode.c \
	vql_attributes.c \
	vqm_attributes.c \
	vqt_attributes.c \
	vqt_cachesize.c \
	vqt_extent.c \
	vqt_extentn.c \
	vqt_extent16.c \
	vqt_extent16n.c \
	vqt_fontinfo.c \
	vqt_get_table.c \
	vqt_name.c \
	vqt_width.c \
	\
	v_arc.c \
	v_bar.c \
	v_cellarray.c \
	v_circle.c \
	v_contourfill.c \
	v_ellarc.c \
	v_ellipse.c \
	v_ellpie.c \
	v_fillarea.c \
	v_gtext.c \
	v_gtextn.c \
	v_gtext16.c \
	v_gtext16n.c \
	v_justified.c \
	v_justified16n.c \
	v_pieslice.c \
	v_pline.c \
	v_pmarker.c \
	v_rbox.c \
	v_rfbox.c \
	vr_recfl.c \
	\
	v_get_pixel.c \
	vr_trnfm.c \
	vro_cpyfm.c \
	vrt_cpyfm.c \
	\
	v_write_png.c \
	\
	n_v_bez.c \
	n_v_bez_fill.c \
	n_v_bez_off.c \
	n_v_bez_on.c \
	n_v_bez_con.c \
	n_v_bez_qual.c \
	n_v_create_driver_info.c \
	n_v_delete_driver_info.c \
	n_v_opnprn.c \
	n_v_read_default_settings.c \
	n_v_write_default_settings.c \
	n_v_clsbm.c \
	n_v_color2nearest.c \
	n_v_color2value.c \
	n_v_create_ctab.c \
	n_v_create_itab.c \
	n_v_ctab_idx2value.c \
	n_v_ctab_idx2vdi.c \
	n_v_ctab_vdi2idx.c \
	n_v_delete_ctab.c \
	n_v_delete_itab.c \
	n_v_ftext.c \
	n_v_ftextn.c \
	n_v_ftext16.c \
	n_v_ftext16n.c \
	n_v_ftext_offset.c \
	n_v_ftext_offset16.c \
	n_v_ftext_offset16n.c \
	n_v_get_ctab_id.c \
	n_v_get_outline.c \
	n_v_getbitmap_info.c \
	n_v_getoutline.c \
	n_v_killoutline.c \
	n_v_open_bm.c \
	n_v_opnbm.c \
	n_v_resize_bm.c \
	n_v_setrgb.c \
	n_v_value2color.c \
	n_vq_ctab.c \
	n_vq_ctab_entry.c \
	n_vq_ctab_id.c \
	n_vq_devinfo.c \
	n_vq_dflt_ctab.c \
	n_vq_ext_devinfo.c \
	n_vq_hilite_color.c \
	n_vq_margins.c \
	n_vq_max_color.c \
	n_vq_min_color.c \
	n_vq_prn_scaling.c \
	n_vq_px_format.c \
	n_vq_scrninfo.c \
	n_vq_weight_color.c \
	n_vqf_bg_color.c \
	n_vqf_fg_color.c \
	n_vql_bg_color.c \
	n_vql_fg_color.c \
	n_vqm_bg_color.c \
	n_vqm_fg_color.c \
	n_vqr_bg_color.c \
	n_vqr_fg_color.c \
	n_vqt_advance.c \
	n_vqt_advance32.c \
	n_vqt_bg_color.c \
	n_vqt_char_index.c \
	n_vqt_devinfo.c \
	n_vqt_ext_name.c \
	n_vqt_f_extent.c \
	n_vqt_f_extent16.c \
	n_vqt_f_extent16n.c \
	n_vqt_f_extentn.c \
	n_vqt_fg_color.c \
	n_vqt_fontheader.c \
	n_vqt_name_and_id.c \
	n_vqt_pairkern.c \
	n_vqt_real_extent.c \
	n_vqt_real_extentn.c \
	n_vqt_real_extent16n.c \
	n_vqt_trackkern.c \
	n_vqt_xfntinfo.c \
	n_vr_transfer_bits.c \
	n_vs_ctab.c \
	n_vs_ctab_entry.c \
	n_vs_dflt_ctab.c \
	n_vs_ctab_entry.c \
	n_vs_dflt_ctab.c \
	n_vs_document_info.c \
	n_vs_hilite_color.c \
	n_vs_max_color.c \
	n_vs_min_color.c \
	n_vs_weight_color.c \
	n_vsf_bg_color.c \
	n_vsf_fg_color.c \
	n_vsl_bg_color.c \
	n_vsl_fg_color.c \
	n_vsm_bg_color.c \
	n_vsm_fg_color.c \
	n_vsr_bg_color.c \
	n_vsr_fg_color.c \
	n_vst_arbpt.c \
	n_vst_arbpt32.c \
	n_vst_bg_color.c \
	n_vst_charmap.c \
	n_vst_fg_color.c \
	n_vst_kern.c \
	n_vst_map_mode.c \
	n_vst_name.c \
	n_vst_setsize.c \
	n_vst_setsize32.c \
	n_vst_skew.c \
	n_vst_track_offset.c \
	n_vst_width.c \
	n_vq_driver_info.c \
	n_vq_bit_image.c \
	n_vs_page_info.c \
	n_vs_crop.c \
	n_vq_image_type.c \
	n_vs_save_disp_list.c \
	n_vs_load_disp_list.c \
	\
	vdi_array2str.c \
	vdi_str2array.c \
	vdi_wstrlen.c \
	\
	vdi_dummy.c \
	vdi_userdef.c vdi_userdef.h \
	\
	vq_gdos.c \
	vq_vgdos.c \
	vdi.c \
	\
	$(empty)
